--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "predeploy": "nuxt build",
+    "deploy": "gh-pages -d dist",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -36,6 +38,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "gh-pages": "^3.1.0",
     "husky": "^4.0.0",
     "lint-staged": "^10.0.0",
     "node-sass": "^4.14.1",
