--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/stylelint-module": "^3.1.0",
-    "@nuxtjs/tailwindcss": "^1.0.0",
+    "@nuxtjs/tailwindcss": "^3.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -42,6 +42,7 @@
     "husky": "^4.0.0",
     "lint-staged": "^10.0.0",
     "node-sass": "^4.14.1",
+    "nuxt-purgecss": "^1.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "stylelint": "^10.1.0"
